// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing audit investigation link props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-4"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-22"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="audit-nav"
          href="/Audit"
        >
          Audit investigation
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with forms list props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-3"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-15"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-16"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-17"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-18"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-19"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-20"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-21"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="audit-nav"
          href="/Audit"
        >
          Audit investigation
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with jobs management props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-2"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-8"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-9"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-10"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-11"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-12"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-13"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-14"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="audit-nav"
          href="/Audit"
        >
          Audit investigation
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Process and Tracing enabled Snapshot testing with processes props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-1"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-2"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-3"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-4"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-5"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-6"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-7"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="audit-nav"
          href="/Audit"
        >
          Audit investigation
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing audit investigation link props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-8"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-41"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="audit-nav"
          href="/Audit"
        >
          Audit investigation
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with forms list props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-7"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-35"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-36"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-37"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-38"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-39"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-40"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with jobs management props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-6"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-29"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-30"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-31"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-32"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-33"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-34"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`DevUINav tests::Sections disabled Snapshot testing with processes props 1`] = `
<div>
  <nav
    aria-label="Nav"
    class="pf-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-5"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-23"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          aria-current="page"
          class="pf-c-nav__link pf-m-current"
          data-ouia-navigation-name="processes-nav"
          href="/Processes"
        >
          Workflows
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-24"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="jobs-management-nav"
          href="/JobsManagement"
        >
          Jobs
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-25"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="task-inbox-nav"
          href="/TaskInbox"
        >
          Tasks
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-26"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="forms-list-nav"
          href="/Forms"
        >
          Forms
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-27"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="monitoring-nav"
          href="/Monitoring"
        >
          Monitoring
        </a>
      </li>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-28"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          data-ouia-navigation-name="customDashboard-nav"
          href="/CustomDashboard"
        >
          Dashboards
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
